NetworkProcessProxy::networkProcessDidTerminate() should copy process pools before iterating over them https://bugs.webkit.org/show_bug.cgi?id=227468

Reviewed by Alex Christensen.

* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::networkProcessDidTerminate):


Canonical link: https://commits.webkit.org/239222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279354 268f45cc-cd09-0410-ab3c-d52691b4dbfc